<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="paid.MainActivityFragment">

    <TextView
        android:id="@+id/instructions_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions" />

    <Button
        android:id="@+id/btn_tell_joke"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/instructions_text_view"
        android:text="@string/button_text"
        tools:ignore="OnClick" />

</RelativeLayout>